# dendrite

./: .gitignore  404.html  README.md  index.html  main.py  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  test.yml
assets/css/: styles.316a8727.css
assets/js/: 0f36ac56.6d6102d4.js  12a2ea8e.6be56fb5.js  17896441.b67969c4.js  4109e314.17da0b1c.js  4109e314.674ce7cf.js  42.7afad161.js  5ae77e08.c56e8376.js  5e8c322a.982a0eaf.js  5e95c892.35dc19aa.js  5f23593a.2dcd3aa0.js  5f23593a.4141fc0a.js  5f23593a.cb73a650.js  74876495.288403f4.js  74876495.28c40e0e.js  74876495.b8078ccf.js  7ed76e31.54743a57.js  7ed76e31.58d23653.js  7fb2a3b8.a90e303a.js  7fb2a3b8.dded2340.js  9ab4f147.c5485ccd.js  9beb87c2.41be5ba3.js  a080258b.cb77e796.js  a7456010.0d97a214.js  a7bd4aaa.8e5b8ccf.js  a94703ab.d91290b2.js  aba21aa0.0d310786.js  adf50dd6.389f8bf9.js  adf50dd6.a272463f.js  af69889d.5a0f27d0.js  bd902415.8e7d9696.js  be839fa9.6533f187.js  be839fa9.cb3fe5d0.js  c4f5d8e4.cb0f64a2.js  c922ec22.9ad14a2b.js  c922ec22.9c36e693.js  d03241c9.8e3d702b.js  db0371bf.77b6d1c0.js  db0371bf.c3cb4772.js  ea665c52.353b040b.js  ec496aef.9a1a30ca.js  (+11 more)
docs/: docusaurus.config.js  index.html  package-lock.json  package.json  sidebars.js
docs/api/: index.html
docs/changelog/: index.html
docs/conceptual/: index.html
docs/docs/: changelog.md  intro.mdx  quickstart.mdx
docs/docs/api/: index.md
docs/docs/conceptual/: index.mdx
docs/docs/guides/: asynchronous-mode.md  data-acquisition.md  index.md  neurofeedback-mode.md  send-events.md  synchronous-mode.md
docs/guides/: index.html
docs/guides/asynchronous-mode/: index.html
docs/guides/data-acquisition/: index.html
docs/guides/neurofeedback-mode/: index.html
docs/guides/send-events/: index.html
docs/guides/synchronous-mode/: index.html
docs/quickstart/: index.html
docs/src/css/: custom.css
docs/src/pages/: index.js  index.module.css
src/dendrite/: __init__.py  constants.py
src/dendrite/auxiliary/: __init__.py
src/dendrite/data/: __init__.py  acquisition.py  dataset.py  event_outlet.py  event_schemas.py  lsl_helpers.py  quality.py  stream_schemas.py
src/dendrite/gui/: __init__.py  output_protocol_manager.py  pipeline_controller.py  shutdown_sequencer.py  utils.py  workers.py
src/dendrite/ml/: __init__.py
src/dendrite/processing/: __init__.py  gating.py  pipeline.py  pipeline_config.py  processor.py  queue_utils.py
src/dendrite/utils/: __init__.py  format_loaders.py  logger_central.py  modality.py  serialization.py  shared_state.py  state_keys.py
tests/: __init__.py  conftest.py  test_helpers.py
tests/experimental/: __init__.py  test_daq_saver_validation.py  test_model_regression.py
tests/experimental/baselines/: regression_baselines.json
tests/integration/: __init__.py  test_daq_integration.py  test_saver_graceful_shutdown.py
tests/performance/: test_daq_saver_stress.py
tests/unit/: __init__.py  test_async_metrics.py  test_asynchronous_mode.py  test_augmentation.py  test_base_mode.py  test_data_acquisition.py  test_data_processor.py  test_data_saver.py  test_database.py  test_dataset.py  test_decoders.py  test_event_schemas.py  test_gating.py  test_lsl_outlet.py  test_metrics.py  test_metrics_saver.py  test_mode_config_manager.py  test_mode_utils.py  test_models.py  test_neural_classifier.py  test_neurofeedback_mode.py  test_output_schema.py  test_preprocessor.py  test_processing_pipeline.py  test_scalers.py  test_serialization.py  test_shared_state.py  test_stream_config_manager.py  test_synchronous_mode.py
tests/unit/dashboard/: test_data_handlers.py
tests/unit/data/: __init__.py  test_bids_export.py  test_h5_io.py  test_mne_export.py
tests/unit/streamers/: __init__.py  conftest.py  test_base.py  test_integration.py  test_lsl.py  test_ros2.py  test_socket.py  test_utils.py  test_visualization.py  test_zmq.py
tests/unit/test_offline_ml/: __init__.py  test_config.py  test_dataset_config.py  test_moabb_interface.py  test_moabb_loader.py  (+2 more)
(+226 files in other folders)
